@@ -4,22 +4,23 @@ import java.io.UnsupportedEncodingException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 
-import sun.misc.BASE64Encoder;
+import org.postgresql.util.Base64;
 
-@SuppressWarnings("restriction")
 public final class PasswordService {
 	private static PasswordService instance;
-
-	private PasswordService() {
+	static {
+		instance = new PasswordService();
 	}
 
-	// First get the instance of this singleton
+	private PasswordService() {}
+
+	/**
+	 * singleton access
+	 * 
+	 * @return
+	 */
 	public static synchronized PasswordService getInstance() {
-		if (instance == null) {
-			return new PasswordService();
-		} else {
-			return instance;
-		}
+		return instance;
 	}
 
 	/**
@@ -38,7 +39,6 @@ public final class PasswordService {
 		md = MessageDigest.getInstance("SHA");
 		md.update(plaintext.getBytes("UTF-8"));
 		byte raw[] = md.digest();
-		String hash = (new BASE64Encoder()).encode(raw);
-		return hash; // step 6
+		return Base64.encodeBytes(raw);
 	}
 }
